--- a/style.css
+++ b/style.css
@@ -22,11 +22,12 @@ header {
   background-color: black;
   border-bottom: 1px solid seashell;
   align-items: center;
+  justify-content: center;
 }
 
 header img {
   height: 50px;
-  padding-left: 10px;
+  margin-left: 10px;
 
 }
 
@@ -94,7 +95,7 @@ nav a {
   background-image: url("resources/images/locations-background.jpg");
   height: 500px;
   width: 1200px;
-  margin-top: 75px;
+  margin-top: 50px;
   padding-top: 70px;
 }
 
@@ -105,12 +106,13 @@ nav a {
 
 h2, h3, h4 {
   padding: 10px;
+  margin: auto;
 }
 
 .location {
   background-color: black;
   opacity: 1;
-  margin: 10px 40px;
+  margin: 15px 40px;
   width: 300px;
 }
 
@@ -122,7 +124,7 @@ h2, h3, h4 {
 
 /* CSS Content - Footer */
 .footer {
-  padding-left: 20px;
+  margin-left: 20px;
   text-align: left;
 }
 
